# coco

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: gitlab.yml
docs/: index.md
docs/src/code_ref/data/: data_handler.md
docs/src/code_ref/models/: bert.md
docs/src/code_ref/trainer/: trainer.md
notebooks/: 01.ML.ipynb  01.ML_Models.ipynb  01.ML_Results.ipynb
src/coco/: __init__.py  consumer_example.py
src/coco/app/: main.py
src/coco/app/controllers/: data_controller.py  lotw_controller.py
src/coco/app/core/: config.py  general_flavor.pl  logger.py  state.py
src/coco/app/models/: data_models.py  lotw_models.py
src/coco/app/services/: calibrator.py  kafka_producer.py  lotw_service.py  service.py
src/coco/app/services/bert_regressor/: inference.py  model.py
src/coco/config/: config.py
src/coco/data/: data_handler.py
src/coco/experiments/: train_baseline.py  train_bert.py
src/coco/inference/: bert_inference.py
src/coco/models/: bert.py
src/coco/trainer/: train.py
src/coco/utils/: logger.py
tests/: conftest.py  test_api.py  test_lotw_service.py  test_services.py  test_utils.py
