[project]
name = "coco"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "gbatsis", email = "gbatsis@ahedd.demokritos.gr" }
]
dependencies = [
    "mkdocs>=1.6.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "pyswip>=0.3.2",
    "python-dotenv>=1.1.0",
    "hf-xet>=1.1.1",
    "confluent-kafka>=2.10.0",
    "mkdocstrings-python>=1.16.12",
    "mkdocs-material>=9.6.14",
]

huggingface_hub = { extras = ["hf_xet"] }

requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/coco"]
